syntax = "proto3";

package api.helloworld.v1;

option go_package = "hello/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "api.helloworld.v1";

service User {
	rpc CreateUser (CreateUserRequest) returns (CreateUserReply);
	rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply);
	rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply);
	rpc GetUser (GetUserRequest) returns (GetUserReply);
	rpc ListUser (ListUserRequest) returns (ListUserReply);
}

message UserModel {
	string name = 1;
	int64 age = 2;
	int64 id = 3;
}

message CreateUserRequest {
		UserModel user =1;
}
message CreateUserReply {
	UserModel user =1;
}

message UpdateUserRequest {
	UserModel user =1;

}
message UpdateUserReply {
	UserModel user =1;
}

message DeleteUserRequest {
	UserModel user =1;
}
message DeleteUserReply {
	UserModel user =1;
}

message GetUserRequest {
	UserModel user =1;
}
message GetUserReply {
	UserModel user =1;
}

message ListUserRequest {
}
message ListUserReply {
	repeated UserModel user =1;
}